# April-Tag-VR-FullBody-Tracker

./: .gitmodules  CMakeLists.txt
AprilTagRouter/: CMakeLists.txt  Tcp.cpp  Tcp.hpp  main.cpp
AprilTagTrackers/: AprilTagWrapper.cpp  AprilTagWrapper.h  CMakeLists.txt  Config.hpp  Connection.cpp  Connection.h  GUI.cpp  GUI.h  GUI.hpp  Helpers.cpp  Helpers.h  Helpers.hpp  Language.h  MyApp.cpp  Parameters.cpp  Parameters.h  Tracker.cpp  Tracker.h  tagCustom28h9.c  tagCustom28h9.h
AprilTagTrackers/GUI/: FormBuilder.hpp  FormBuilder.tpp  MainFrame.cpp
AprilTagTrackers/IPC/: IPC.hpp
AprilTagTrackers/tracker/: MainLoopRunner.hpp  TrackerUnit.hpp  VRDriver.cpp  VRDriver.hpp
JPEGWrapper/: jpegwrapper.cmake  jpegwrapper.cpp  jpegwrapper.hpp
MulticamCalibrator/: AprilTagWrapper.h  CMakeLists.txt  Connection.cpp  EulerAngles.c  EulerAngles.h  GUI.cpp  GUI.h  Helpers.cpp  Helpers.h  Language.h  Language_Chinese.cpp  MyApp.cpp  MyApp.h  Parameters.cpp  Parameters.h  QuatTypes.h  Tracker.cpp  Tracker.h  params.yml
V4L2Wrapper/: v4l2wrapper.cmake  v4l2wrapper.cpp  v4l2wrapper.hpp
